student/ctr-exercise-rest/src/main/k8s/demo_2/app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercise-app
spec:
  selector:
    matchLabels:
      name: exercise-app
  template:
    metadata:
      labels:
        name: exercise-app
    spec:
      containers:
      - name: exercise-app
        image: seminar/ctr-exercise-rest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
