student/ctr-exercise-rest/src/main/k8s/demo_2/db_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercise-db
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: exercise-db
  template:
    metadata:
      labels:
        name: exercise-db
    spec:
      containers:
      - image: mysql:8.0.3
        imagePullPolicy: IfNotPresent
        name:  mysql
        ports:
          - containerPort: 3306
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: db-volume
      volumes:
      - name: db-volume
        persistentVolumeClaim:
          claimName: exercise-db
