student/ctr-exercise-rest/src/main/k8s/demo_2/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exercise-app
spec:
  selector:
    name: exercise-app
  ports:
  - port: 8080
    targetPort: 8080
