student/ctr-exercise-rest/src/main/k8s/demo_2/app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exercise-app-ingress
spec:
  rules:
  - host: exercise.localtest.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: exercise-service
            port: 
              name: web
